update homepage projects demo style

--- a/index.html
+++ b/index.html
@@ -34,76 +34,143 @@
       <div class="projects-container">
         <h1>Recent Projects</h1>
         <h2>近期项目</h2>
-        <ul style="display: inline-block;">
+        <ul>
           <li>
-            <div id="me495Demo" class="demo-img center" style="background-image:url(files/projects/me495_embedded_systems/demo.jpg);" onclick="demoOnClick(event, 'me495')">
-              <p>
-                Connect-4
-              </p>
+            <div id="me495Demo" class="project-demo center" onclick="demoOnClick(event, 'me495')">
+              <img id="me495DemoImg" src="files/projects/me495_embedded_systems/demo.jpg" alt"me495 demo img"/>
+              <div id="me495DemoDescription" class="demo-description">
+                <h1>Connect-4</h1>
+                <h2>Group Project</h2>
+                <h2>ROS</h2>
+                <h2>python</h2>
+                <h2>tk</h2>
+                <h2>Computer Vision</h2>
+                <h2>Minimax</h2>
+                <p>
+                  Programs Sawyer to play connect-4 against human player
+                </p>
+              </div>
             </div>
           </li>
           <li>
-            <div id="me449Demo" class="demo-img center" style="background-image:url(files/projects/me449_robotics_manipulation/demo.jpg);" onclick="demoOnClick(event, 'me449')">
-              <p>
-                youBot Pick and Place
-              </p>
+            <div id="me449Demo" class="project-demo center" onclick="demoOnClick(event, 'me449')">
+              <img id="me449DemoImg" src="files/projects/me449_robotics_manipulation/demo.jpg" alt"me449 demo img"/>
+              <div id="me449DemoDescription" class="demo-description">
+                <h1>youBot Planning</h1>
+                <h2>Independent Project</h2>
+                <h2>python</h2>
+                <h2>CoppeliaSim</h2>
+                <h2>Motion Planning</h2>
+                <h2>Control System</h2>
+                <p>
+                  Plans trajectory for youBot to pick and place block at specified location
+                </p>
+              </div>
             </div>
           </li>
           <li>
-            <div id="me314Demo" class="demo-img center" style="background-image:url(files/projects/me314_machine_dynamics/demo.jpg);" onclick="demoOnClick(event, 'me314')">
-              <p>
-                Jack in the box
-              </p>
+            <div id="me314Demo" class="project-demo center" onclick="demoOnClick(event, 'me314')">
+              <img id="me314DemoImg" src="files/projects/me314_machine_dynamics/demo.jpg" alt"me314 demo img"/>
+              <div id="me314DemoDescription" class="demo-description">
+                <h1>Jack in the box</h1>
+                <h2>Independent Project</h2>
+                <h2>python</h2>
+                <h2>numpy</h2>
+                <h2>dynamics</h2>
+                <p>
+                  Simulates a jack in a box
+                </p>
+              </div>
             </div>
           </li>
           <li>
-            <div id="me315Demo" class="demo-img center" style="background-image:url(files/projects/me315_design_element/demo.jpg);" onclick="demoOnClick(event, 'me315')">
-              <p>
-                Gear-train system design
-              </p>
+            <div id="me315Demo" class="project-demo center" onclick="demoOnClick(event, 'me315')">
+              <img id="me315DemoImg" src="files/projects/me315_design_element/demo.jpg" alt"me449 demo img"/>
+              <div id="me315DemoDescription" class="demo-description">
+                <h1>Gear-train design</h1>
+                <h2>Group Project</h2>
+                <h2>CAD</h2>
+                <h2>SiemensNX</h2>
+                <h2>Design elements</h2>
+                <p>
+                  Designs a compound gear-train system for power transmission
+                </p>
+              </div>
             </div>
           </li>
           <li>
-            <div id="ece498Demo" class="demo-img center" style="background-image:url(files/projects/ece498_walk_distance/demo.jpg);" onclick="demoOnClick(event, 'ece498')">
-              <p>
-                Walk distance tracking
-              </p>
+            <div id="ece498Demo" class="project-demo center" onclick="demoOnClick(event, 'ece498')">
+              <img id="ece498DemoImg" src="files/projects/ece498_walk_distance/demo.jpg" alt"ece498 demo img"/>
+              <div id="ece498DemoDescription" class="demo-description">
+                <h1>Walk distance tracking</h1>
+                <h2>Group Project</h2>
+                <h2>MATLAB</h2>
+                <h2>Mobile device</h2>
+                <h2>Android</h2>
+                <p>
+                  Tracks walk distance of mobile device carrier through sensors' data analysis
+                </p>
+              </div>
             </div>
           </li>
           <li>
-            <div id="vispracticeDemo" class="demo-img center" style="background-image:url(files/projects/vispractice_jd_crawler/demo.jpg);" onclick="demoOnClick(event, 'vispractice')">
-              <p>
-                Vispractice Intern Project<br>
-                JD.com mobile info crawler<br>
-                June 2017 - Aug 2017
-              </p>
+            <div id="vispracticeDemo" class="project-demo center" onclick="demoOnClick(event, 'vispractice')">
+              <img id="vispracticeDemoImg" src="files/projects/vispractice_jd_crawler/demo.jpg" alt"vispractice demo img"/>
+              <div id="vispracticeDemoDescription" class="demo-description">
+                <h1>JD.com crawler</h1>
+                <h2>Independent Project</h2>
+                <h2>python</h2>
+                <h2>django</h2>
+                <h2>MySQL</h2>
+                <h2>Haystack</h2>
+                <h2>HTML</h2>
+                <p>
+                  Crawls mobilephones' information from JD.com, build database and search engine
+                </p>
+              </div>
             </div>
           </li>
           <li>
-            <div id="ece110hDemo" class="demo-img center" style="background-image:url(files/projects/ece110h_laser_guitar/demo.jpg);" onclick="demoOnClick(event, 'ece110h')">
-              <p>
-                ECE 210H Final Projects<br>
-                Arduino Laser Guitar<br>
-                May 2017
-              </p>
+            <div id="ece110hDemo" class="project-demo center" onclick="demoOnClick(event, 'ece110h')">
+              <img id="ece110hDemoImg" src="files/projects/ece110h_laser_guitar/demo.jpg" alt"ece110h demo img"/>
+              <div id="ece110hDemoDescription" class="demo-description">
+                <h1>Laser Guitar</h1>
+                <h2>Group Project</h2>
+                <h2>Arduino</h2>
+                <h2>mechatronics</h2>
+                <p>
+                  Builds simple laser guitar from laser modules, light to frequency converters and buzzer
+                </p>
+              </div>
             </div>
           </li>
           <li>
-            <div id="iroboticsDemo" class="demo-img center" style="background-image:url(files/projects/irobotics_16_projects_team/demo.jpg);" onclick="demoOnClick(event, 'irobotics')">
-              <p>
-                iRobotics Project Team<br>
-                Robotic Arm<br>
-                July 2016 - Apr. 2017
-              </p>
+            <div id="iroboticsDemo" class="project-demo center" onclick="demoOnClick(event, 'irobotics')">
+              <img id="iroboticsDemoImg" src="files/projects/irobotics_16_projects_team/demo.jpg" alt"irobotics demo img"/>
+              <div id="iroboticsDemoDescription" class="demo-description">
+                <h1>Robotic Arm</h1>
+                <h2>Group Project</h2>
+                <h2>CAD</h2>
+                <h2>Arduino</h2>
+                <h2>mechatronics</h2>
+                <p>
+                  Builds a robotic arm from scratch
+                </p>
+              </div>
             </div>
           </li>
           <li>
-            <div id="papeiDemo" class="demo-img center" style="background-image:url(files/projects/papei/demo.jpg);" onclick="demoOnClick(event, 'papei')">
-              <p>
-                PāPēi<br>
-                CIE Past Papers Viewer<br>
-                Jan. 2016 - May 2017
-              </p>
+            <div id="papeiDemo" class="project-demo center" onclick="demoOnClick(event, 'papei')">
+              <img id="papeiDemoImg" src="files/projects/papei/demo.jpg" alt"papei demo img"/>
+              <div id="papeiDemoDescription" class="demo-description">
+                <h1>PāPēi</h1>
+                <h2>Independent Project</h2>
+                <h2>C#</h2>
+                <h2>python</h2>
+                <p>
+                  CIE Past Papers Viewer
+                </p>
+              </div>
             </div>
           </li>
         </ul>
@@ -156,8 +223,10 @@
         <span class="close" onclick="closeDemo('me495')">&times;</span>
         <div id="me495Heading" style="padding-bottom: 3%;">
           <h1 class="heading">Connect-4</h1>
-          <h3>Oct 2020 - Dec 2020, Group project with Peter Sauer, Bill Bi, Juntao He</h3>
-          <h3>Northwestern ME495 Embedded Systems Final Project</h3>
+          <p>
+            Oct 2020 - Dec 2020, Group project with Peter Sauer, Bill Bi, Juntao He</br>
+            Northwestern ME495 Embedded Systems Final Project
+          </p>
         </div>
 
         <div id="me495Intro">
