fix homepage size compatibility

--- a/index.html
+++ b/index.html
@@ -35,10 +35,28 @@
         <h1>Recent Projects</h1>
         <h2>近期项目</h2>
         <ul>
+          <!-- ME499 Demo -->
           <li>
-            <div id="me495Demo" class="project-demo center" onclick="demoOnClick(event, 'me495')">
-              <img id="me495DemoImg" src="files/projects/me495_embedded_systems/demo.jpg" alt"me495 demo img"/>
-              <div id="me495DemoDescription" class="demo-description">
+            <div id="me499Demo" class="project-demo center" onclick="demoOnClick(event, 'me499')">
+              <img id="me499fDemoImg" src="files/projects/me499_winter_project/demo.gif" alt="me499 demo img"/>
+              <div id="me499fDemoDescription" class="demo-description">
+                <h1>Chameleon</h1>
+                <h2>Independent Project</h2>
+                <h2>ROS</h2>
+                <h2>C++</h2>
+                <h2>Computer Vision</h2>
+                <h2>Mechatronics</h2>
+                <p>
+                  Programs turtlebot to camouflage like a chameleon
+                </p>
+              </div>
+            </div>
+          </li>
+          <!-- ME495F Demo -->
+          <li>
+            <div id="me495fDemo" class="project-demo center" onclick="demoOnClick(event, 'me495f')">
+              <img id="me495fDemoImg" src="files/projects/me495f_embedded_systems/demo.jpg" alt="me495f demo img"/>
+              <div id="me495fDemoDescription" class="demo-description">
                 <h1>Connect-4</h1>
                 <h2>Group Project</h2>
                 <h2>ROS</h2>
@@ -52,11 +70,12 @@
               </div>
             </div>
           </li>
+          <!-- ME449 Demo -->
           <li>
             <div id="me449Demo" class="project-demo center" onclick="demoOnClick(event, 'me449')">
-              <img id="me449DemoImg" src="files/projects/me449_robotics_manipulation/demo.jpg" alt"me449 demo img"/>
+              <img id="me449DemoImg" src="files/projects/me449_robotics_manipulation/demo.jpg" alt="me449 demo img"/>
               <div id="me449DemoDescription" class="demo-description">
-                <h1>youBot Planning</h1>
+                <h1>youBot planning</h1>
                 <h2>Independent Project</h2>
                 <h2>python</h2>
                 <h2>CoppeliaSim</h2>
@@ -68,9 +87,10 @@
               </div>
             </div>
           </li>
+          <!-- ME314 Demo -->
           <li>
             <div id="me314Demo" class="project-demo center" onclick="demoOnClick(event, 'me314')">
-              <img id="me314DemoImg" src="files/projects/me314_machine_dynamics/demo.jpg" alt"me314 demo img"/>
+              <img id="me314DemoImg" src="files/projects/me314_machine_dynamics/demo.jpg" alt="me314 demo img"/>
               <div id="me314DemoDescription" class="demo-description">
                 <h1>Jack in the box</h1>
                 <h2>Independent Project</h2>
@@ -83,9 +103,10 @@
               </div>
             </div>
           </li>
+          <!-- ME315 Demo -->
           <li>
             <div id="me315Demo" class="project-demo center" onclick="demoOnClick(event, 'me315')">
-              <img id="me315DemoImg" src="files/projects/me315_design_element/demo.jpg" alt"me449 demo img"/>
+              <img id="me315DemoImg" src="files/projects/me315_design_element/demo.jpg" alt="me449 demo img"/>
               <div id="me315DemoDescription" class="demo-description">
                 <h1>Gear-train design</h1>
                 <h2>Group Project</h2>
@@ -98,9 +119,10 @@
               </div>
             </div>
           </li>
+          <!-- ECE498 Demo -->
           <li>
             <div id="ece498Demo" class="project-demo center" onclick="demoOnClick(event, 'ece498')">
-              <img id="ece498DemoImg" src="files/projects/ece498_walk_distance/demo.jpg" alt"ece498 demo img"/>
+              <img id="ece498DemoImg" src="files/projects/ece498_walk_distance/demo.jpg" alt="ece498 demo img"/>
               <div id="ece498DemoDescription" class="demo-description">
                 <h1>Walk distance tracking</h1>
                 <h2>Group Project</h2>
@@ -113,9 +135,10 @@
               </div>
             </div>
           </li>
+          <!-- Vispractice Demo -->
           <li>
             <div id="vispracticeDemo" class="project-demo center" onclick="demoOnClick(event, 'vispractice')">
-              <img id="vispracticeDemoImg" src="files/projects/vispractice_jd_crawler/demo.jpg" alt"vispractice demo img"/>
+              <img id="vispracticeDemoImg" src="files/projects/vispractice_jd_crawler/demo.jpg" alt="vispractice demo img"/>
               <div id="vispracticeDemoDescription" class="demo-description">
                 <h1>JD.com crawler</h1>
                 <h2>Independent Project</h2>
@@ -130,45 +153,48 @@
               </div>
             </div>
           </li>
+          <!-- ECE110H Demo -->
           <li>
             <div id="ece110hDemo" class="project-demo center" onclick="demoOnClick(event, 'ece110h')">
-              <img id="ece110hDemoImg" src="files/projects/ece110h_laser_guitar/demo.jpg" alt"ece110h demo img"/>
+              <img id="ece110hDemoImg" src="files/projects/ece110h_laser_guitar/demo.jpg" alt="ece110h demo img"/>
               <div id="ece110hDemoDescription" class="demo-description">
                 <h1>Laser Guitar</h1>
                 <h2>Group Project</h2>
                 <h2>Arduino</h2>
-                <h2>mechatronics</h2>
+                <h2>Mechatronics</h2>
                 <p>
                   Builds simple laser guitar from laser modules, light to frequency converters and buzzer
                 </p>
               </div>
             </div>
           </li>
+          <!-- iRobotics Demo -->
           <li>
             <div id="iroboticsDemo" class="project-demo center" onclick="demoOnClick(event, 'irobotics')">
-              <img id="iroboticsDemoImg" src="files/projects/irobotics_16_projects_team/demo.jpg" alt"irobotics demo img"/>
+              <img id="iroboticsDemoImg" src="files/projects/irobotics_16_projects_team/demo.jpg" alt="irobotics demo img"/>
               <div id="iroboticsDemoDescription" class="demo-description">
                 <h1>Robotic Arm</h1>
                 <h2>Group Project</h2>
                 <h2>CAD</h2>
                 <h2>Arduino</h2>
-                <h2>mechatronics</h2>
+                <h2>Mechatronics</h2>
                 <p>
                   Builds a robotic arm from scratch
                 </p>
               </div>
             </div>
           </li>
+          <!-- PaPei Demo -->
           <li>
             <div id="papeiDemo" class="project-demo center" onclick="demoOnClick(event, 'papei')">
-              <img id="papeiDemoImg" src="files/projects/papei/demo.jpg" alt"papei demo img"/>
+              <img id="papeiDemoImg" src="files/projects/papei/demo.jpg" alt="papei demo img"/>
               <div id="papeiDemoDescription" class="demo-description">
                 <h1>PāPēi</h1>
                 <h2>Independent Project</h2>
                 <h2>C#</h2>
                 <h2>python</h2>
                 <p>
-                  CIE Past Papers Viewer
+                  CIE Past Papers Viewer crawled and sorted
                 </p>
               </div>
             </div>
@@ -217,11 +243,11 @@
       </nav>
     </footer>
 
-    <!-- ME 495 Modal Box -->
-    <div id="me495Modal" class="modal">
+    <!-- ME495F Modal Box -->
+    <div id="me495fModal" class="modal">
       <div class="modal-content">
-        <span class="close" onclick="closeDemo('me495')">&times;</span>
-        <div id="me495Heading" style="padding-bottom: 3%;">
+        <span class="close" onclick="closeDemo('me495f')">&times;</span>
+        <div id="me495fHeading" style="padding-bottom: 3%;">
           <h1 class="heading">Connect-4</h1>
           <p>
             Oct 2020 - Dec 2020, Group project with Peter Sauer, Bill Bi, Juntao He</br>
@@ -229,7 +255,7 @@
           </p>
         </div>
 
-        <div id="me495Intro">
+        <div id="me495fIntro">
           <h2 class="heading">Introduction</h2>
           <p>
             This project is about utilizing a Sawyer robot arm to play the famous board game connect-4 against a human player. As two players take turns and place pieces,
@@ -237,74 +263,74 @@
           </p>
         </div>
 
-        <div id="me495Gallery" class="gallery">
+        <div id="me495fGallery" class="gallery">
           <div class="slides">
             <div class="number-text">1 / 5</div>
-            <img class="slide-image" src="files/projects/me495_embedded_systems/image2.jpeg">
+            <img class="slide-image" src="files/projects/me495f_embedded_systems/image2.jpeg">
           </div>
           <div class="slides">
             <div class="number-text">2 / 5</div>
             <video class="slide-video" controls>
-              <source src="files/projects/me495_embedded_systems/video_0.mp4" type="video/mp4">
+              <source src="files/projects/me495f_embedded_systems/video_0.mp4" type="video/mp4">
             </video>
           </div>
           <div class="slides">
             <div class="number-text">3 / 5</div>
             <video class="slide-video" controls>
-              <source src="files/projects/me495_embedded_systems/video_1.mp4" type="video/mp4">
+              <source src="files/projects/me495f_embedded_systems/video_1.mp4" type="video/mp4">
             </video>
           </div>
           <div class="slides">
             <div class="number-text">4 / 5</div>
             <video class="slide-video" controls>
-              <source src="files/projects/me495_embedded_systems/video_2.mp4" type="video/mp4">
+              <source src="files/projects/me495f_embedded_systems/video_2.mp4" type="video/mp4">
             </video>
           </div>
           <div class="slides">
             <div class="number-text">5 / 5</div>
             <video class="slide-video" controls>
-              <source src="files/projects/me495_embedded_systems/video_3_crop_cut.mp4" type="video/mp4">
+              <source src="files/projects/me495f_embedded_systems/video_3_crop_cut.mp4" type="video/mp4">
             </video>
           </div>
 
-          <a class="prev" onclick="plusSlides('me495', -1)">&#10094;</a>
-          <a class="next" onclick="plusSlides('me495', 1)">&#10095;</a>
+          <a class="prev" onclick="plusSlides('me495f', -1)">&#10094;</a>
+          <a class="next" onclick="plusSlides('me495f', 1)">&#10095;</a>
 
           <div class="caption-container">
-            <p id="me495Caption"></p>
+            <p id="me495fCaption"></p>
           </div>
 
           <div class="row">
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 1)">
-                <img src="files/projects/me495_embedded_systems/image2.jpeg" style="width: 100%;">
+            <div class="column-me495f">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495f', 1)">
+                <img src="files/projects/me495f_embedded_systems/image2.jpeg" style="width: 100%;">
                 <h1 class="demo-caption">Connect-4 board setup</h1>
               </div>
             </div>
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 2)">
-                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_0_poster.jpg" style="width: 100%;">
+            <div class="column-me495f">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495f', 2)">
+                <img class="demo-poster" src="files/projects/me495f_embedded_systems/video_0_poster.jpg" style="width: 100%;">
                 <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
                 <h1 class="demo-caption">Play against the AI and win</h1>
               </div>
             </div>
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 3)">
-                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_1_poster.jpg" style="width: 100%;">
+            <div class="column-me495f">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495f', 3)">
+                <img class="demo-poster" src="files/projects/me495f_embedded_systems/video_1_poster.jpg" style="width: 100%;">
                 <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
                 <h1 class="demo-caption">Play against the AI and loss</h1>
               </div>
             </div>
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 4)">
-                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_2_poster.jpg" style="width: 100%;">
+            <div class="column-me495f">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495f', 4)">
+                <img class="demo-poster" src="files/projects/me495f_embedded_systems/video_2_poster.jpg" style="width: 100%;">
                 <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
                 <h1 class="demo-caption">Early testing</h1>
               </div>
             </div>
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 5)">
-                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_3_poster.jpg" style="width: 100%;">
+            <div class="column-me495f">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495f', 5)">
+                <img class="demo-poster" src="files/projects/me495f_embedded_systems/video_3_poster.jpg" style="width: 100%;">
                 <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
                 <h1 class="demo-caption">tk connect-4 AI simulation</h1>
               </div>
@@ -312,7 +338,7 @@
           </div>
         </div>
 
-        <div id="me495Architecture" style="padding-top: 3%;">
+        <div id="me495fArchitecture" style="padding-top: 3%;">
           <h2 class="heading">Architecture</h2>
           <h2 class="sub-heading">Robot</h2>
           <p>
@@ -341,21 +367,23 @@
           </p>
         </div>
 
-        <div id="me495Close" class="modal-nav" style="padding-top: 3%;">
+        <div id="me495fClose" class="modal-nav" style="padding-top: 3%;">
           <button onclick="location.href='https://github.com/FrogJin/final-project-connect-4'">Github Page</a>
-          <button onclick="closeDemo('me495')">Close Project</button>
+          <button onclick="closeDemo('me495f')">Close Project</button>
         </div>
       </div>
     </div>
 
-    <!-- ME 449 Modal Box -->
+    <!-- ME449 Modal Box -->
     <div id="me449Modal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeDemo('me449')">&times;</span>
         <div id="me449Heading" style="padding-bottom: 3%;">
-          <h1 class="heading">youBot Pick and Place</h1>
-          <h3>Nov 2020 - Dec 2020, Independent Capstone project</h3>
-          <h3>Northwestern ME449 Robotics Manipulation</h3>
+          <h1 class="heading">youBot Planning</h1>
+          <p>
+            Nov 2020 - Dec 2020, Independent Capstone project</br>
+            Northwestern ME449 Robotics Manipulation
+          </p>
         </div>
 
         <div id="me449Intro">
@@ -426,7 +454,7 @@
       </div>
     </div>
 
-    <!-- ME 314 Modal Box -->
+    <!-- ME314 Modal Box -->
     <div id="me314Modal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeDemo('me314')">&times;</span>
@@ -477,12 +505,12 @@
       </div>
     </div>
 
-    <!-- ME 315 Modal Box -->
+    <!-- ME315 Modal Box -->
     <div id="me315Modal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeDemo('me315')">&times;</span>
         <div id="me315Heading" style="padding-bottom: 3%;">
-          <h1 class="heading">Gear-train system</h1>
+          <h1 class="heading">Gear-train Design</h1>
           <h3>Oct 2020 - Dec 2020, Group project with Malav Patel, Chengjian Tao</h3>
           <h3>Northwestern ME315 Design Element</h3>
         </div>
@@ -588,7 +616,7 @@
       </div>
     </div>
 
-    <!-- ECE 498 Modal Box -->
+    <!-- ECE498 Modal Box -->
     <div id="ece498Modal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeDemo('ece498')">&times;</span>
