--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="CSS/top_nav_style.css" type="text/css" media="all">
     <!-- <link rel="stylesheet" href="files/fonts/JinWen.css"/> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="JS/home_script.js" defer></script>
   </head>
 
@@ -242,6 +244,153 @@
           </ul>
       </nav>
     </footer>
+
+    <!-- ME499 Modal Box -->
+    <div id="me499Modal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeDemo('me499')">&times;</span>
+        <div id="me499Heading" style="padding-bottom: 3%;">
+          <h1 class="heading">Chameleon</h1>
+          <p>
+            Jan 2021 - Mar 2021, Independent project</br>
+            Northwestern ME499 MSR Winter Project
+          </p>
+        </div>
+
+        <div id="me499Intro">
+          <h2 class="heading">Introduction</h2>
+          <p>
+            Inspired by chameleon, I have this idea of a project to add camouflage feture to turtlebot, named CHAMELEON, that can move in front of an
+            image without the audience notice it. The robot is based on turtlebot3 burger with a LED screen (large enough to cover the body)
+            on the front and a wide-range camera on the back.</br>
+            The idea is when the robot moves in front of the image, it will process the part of the image captured by the camera and put it on the front LED screen. So 
+            that when someone look from the front view, the robot is ’invisible’.
+          </p>
+        </div>
+
+        <div id="me499Gallery" class="gallery">
+          <div class="slides">
+            <div class="number-text">1 / 5</div>
+            <video class="slide-video" controls>
+              <source src="files/projects/me499_winter_project/video_0.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="slides">
+            <div class="number-text">2 / 5</div>
+            <video class="slide-video" controls>
+              <source src="files/projects/me499_winter_project/video_0.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="slides">
+            <div class="number-text">3 / 5</div>
+            <img class="slide-image" src="files/projects/me499_winter_project/image_0.jpg">
+          </div>
+          <div class="slides">
+            <div class="number-text">4 / 5</div>
+            <img class="slide-image" src="files/projects/me499_winter_project/image_1.png">
+          </div>
+          <div class="slides">
+            <div class="number-text">5 / 5</div>
+            <img class="slide-image" src="files/projects/me499_winter_project/image_2.png">
+          </div>
+
+          <a class="prev" onclick="plusSlides('me499', -1)">&#10094;</a>
+          <a class="next" onclick="plusSlides('me499', 1)">&#10095;</a>
+
+          <div class="caption-container">
+            <p id="me499Caption"></p>
+          </div>
+
+          <div class="row">
+            <div class="column-me499">
+              <div class="gallery-demo cursor" onclick="currentSlides('me499', 1)">
+                <img class="demo-poster" src="files/projects/me499_winter_project/video_0_poster.png" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">CHAMELEON Demo 1</h1>
+              </div>
+            </div>
+            <div class="column-me499">
+              <div class="gallery-demo cursor" onclick="currentSlides('me499', 2)">
+                <img class="demo-poster" src="files/projects/me499_winter_project/video_0_poster.png" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">CHAMELEON Demo 2</h1>
+              </div>
+            </div>
+            <div class="column-me499">
+              <div class="gallery-demo cursor" onclick="currentSlides('me499', 3)">
+                <img src="files/projects/me499_winter_project/image_0.jpg" style="width: 100%;">
+                <h1 class="demo-caption">Concept diagram</h1>
+              </div>
+            </div>
+            <div class="column-me499">
+              <div class="gallery-demo cursor" onclick="currentSlides('me499', 4)">
+                <img src="files/projects/me499_winter_project/image_1.png" style="width: 100%;">
+                <h1 class="demo-caption">High-level diagram</h1>
+              </div>
+            </div>
+            <div class="column-me499">
+              <div class="gallery-demo cursor" onclick="currentSlides('me499', 5)">
+                <img src="files/projects/me499_winter_project/image_2.png" style="width: 100%;">
+                <h1 class="demo-caption">Block diagram</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="me499Architecture" style="padding-top: 3%;">
+          <h2 class="heading">Architecture</h2>
+          <h2 class="sub-heading">Robot</h2>
+          <p>
+            The camouflage feature is added to the turtlebot burger, based on its solid moving functionality.</br>
+            Since the turtlebot only needs to move in the forward/backward direction, a ros node is setup to constantly publishing 
+            commanded velocities to the turtlebot to make it move in the forward/backward direction at a desired speed (0.001 m/s).</br>
+            The speed is set by allowing sufficient time for the computer vision algorithm the run between matrix updates without the audience seeing the latching performance.
+          </p>
+          <h2 class="sub-heading">Mechatronics</h2>
+          <p>
+            The turtlebot does no have a built-in camera module. So a <a href="https://www.arducam.com/product/arducam-ov5647-standard-raspberry-pi-camera-b0033/" target="_blank">Arducam 5MP Camera</a> 
+            module is added to the raspberrypi 3 B+ used by the turtlebot to capture images at the back.</br>
+            Since the turtlebot burger has a height of 192mm, I choose to use the <a href="https://www.adafruit.com/product/3649" target="_blank">64x64 LED Matrix</a> (160mm x 160mm) along with the
+            <a href="https://www.adafruit.com/product/3211" target="_blank">RGB Matrix Bonnet</a> as the front display module for the CHAMELEON. The LED Matrix can cover most of the turtlebot, leaving only 
+            part of the LiDAR at top, and part of the wheels at the bottom visible to the audience.
+          </p>
+          <h2 class="sub-heading">LED Matrix</h2>
+          <p>
+            The LED Matrix is initialized with the following parameters:
+            <ul>
+              <li>Hardware gpio mapping: adafruit-hat (compatible with the bonnet I used)</li>
+              <li>Refresh rate: >=400Hz</li>
+              <li>Brightness level: 80%</li>
+            </ul>
+            The offscreen canvas is enabled to allow pixel drawing on the offscreen canvas and swap canvas among refreshing, which provides more stable display.</br>
+            The screen flushing performance as shown in the demo might due to computer vision algorithm competing with the matrix bonnet for the memory bus. The issue is expected
+            to be solved by improving algorithm.
+          </p>
+          <h2 class="sub-heading">Computer Vision</h2>
+          <p>
+            The computer vision part of the project relies on the opencv2 C++ module. Once the camera take the picture at the back, the picture is cropped based on a linear index 
+          </p>
+          <h3>$$index = {pose_{end} - pose_{start} \over duration}.$$</h3>
+          <p>
+            which compensates the changing of the viewing angle of the audience as the robot move. By applying Hough Circle Transform on the cropped image, the color of the corresponding
+            pixels of the recognized circles are set and draw on the offscreen canvas, which will be swap to the matrix on next vertical synchronization.
+          </p>
+          <h2 class="sub-heading">Demonstration</h2>
+          <p>
+            The CHAMELEON drive in two different scenarios
+            <ul>
+              <li>One pixelated chameleon poster at the back</li>
+              <li>Two pixelated landscape (grassland & desert) poster at the back</li>
+            </ul>
+          </p>
+        </div>
+
+        <div id="me499Close" class="modal-nav" style="padding-top: 3%;">
+          <button onclick="location.href='https://github.com/FrogJin/ME499_Chameleon'">Github Page</a>
+          <button onclick="closeDemo('me499')">Close Project</button>
+        </div>
+      </div>
+    </div>
 
     <!-- ME495F Modal Box -->
     <div id="me495fModal" class="modal">
