future works added

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           </p>
         </div>
 
-        <h2 class="sub-heading">Future Work</h2>
+        <h2 class="sub-heading">Future Works</h2>
           <ul style="list-style-type:disc">
             <li style="margin-left:1em">
               The screen flushing performance as shown in the demo might due to computer vision algorithm competing with the matrix bonnet for the memory bus. The issue is expected
@@ -444,6 +444,13 @@
                   Add a sensor to detect the location of the audience, then rotate and update the screen accordingly.
                 </li>
               </ul>
+            </li>
+            <li style="margin-left: 1em;">
+              The 64x64 LED Matrix used is pixelated. So the camouflage effect will look different when applying to real world scenarios instead of pixelate background image. Using a screen
+              at a better resolution could potentially solve the problem.
+            </li>
+            <li style="margin-left: 1em;">
+              Light sensors could be added to the project to better accommodate the light coming from the surrounding environment that will affect how audience see the poster at the back.
             </li>
           </ul>
 
