--- a/index.html
+++ b/index.html
@@ -37,6 +37,23 @@
         <h1>Recent Projects</h1>
         <h2>近期项目</h2>
         <ul>
+          <!-- Master Final Project Demo -->
+          <li>
+            <div id="mfpDemo" class="project-demo center" onclick="demoOnClick(event, 'mfp')">
+              <img id="mfpDemoImg" src="files/projects/master_final_project/demogif.gif" alt="master final project demo img"/>
+              <div id="mfpDemoDescription" class="demo-description">
+                <h1>Tim Multi-Interfacing Device</h1>
+                <h2>Independent Project</h2>
+                <h2>Bluetooth</h2>
+                <h2>Python</h2>
+                <h2>Xboxdrv</h2>
+                <h2>Udev</h2>
+                <p>
+                  Bluetooth device simulates Xbox joystick from wheelchair interfaces
+                </p>
+              </div>
+            </div>
+          </li>
           <!-- ME499 Demo -->
           <li>
             <div id="me499Demo" class="project-demo center" onclick="demoOnClick(event, 'me499')">
@@ -244,6 +261,151 @@
           </ul>
       </nav>
     </footer>
+
+    <!-- Master Final Project Modal Box -->
+    <div id="mfpModal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeDemo('mfp')">&times;</span>
+        <div id="mfpHeading" style="padding-bottom: 3%;">
+          <h1 class="heading">Tim Multi-Interfacing Device</h1>
+          <p>
+            Apr 2021 - Dec 2021, Independent project</br>
+            Northwestern Master Final Project
+          </p>
+        </div>
+
+        <div id="mfpIntro">
+          <h2 class="heading">Introduction</h2>
+          <p>
+            Tim Multi-Interfacing Device was inspired by
+            <a href="https://www.slashgear.com/freedom-wing-adapter-turns-electric-wheelchair-into-xbox-controller-31608250/" target="_blank">the Freedom Wing adapter</a> 
+            designed by AbleGamers which enables disabled video game players to use their electric wheelchair interfaces as an xbox controller.
+            The Freedom Wing adapter serves as the connection device between the wheelchair and a Microsoft’s XBox Adaptive Controller, 
+            which takes any personal input device and convert it into a standard XBox controller. Freedom Wing is open source, and is reproducible at a cost of around 35 dollars, 
+            which is amazing.
+          </p>
+          <p style="padding-top: 1%;">
+            Based on the Freedom Wing adapter, the idea of my project is to replace the wired connection with bluetooth, which means once my device is attached
+            to the wheelchair, the disabled only needs to turn its power on/off instead of pluging/unpluging a bunch of wires. My device is also part of a bigger plan designed by
+            <a href="https://www.argallab.northwestern.edu/" target="_blank">Argallab</a> which involves user's interface data collection. My device will collect data which will be
+            used by Android app for future studies.
+          </p>
+          <p style="padding-top: 1%;">
+            The project is still under development.
+          </p>
+        </div>
+
+        <div id="mfpGallery" class="gallery">
+          <div class="slides">
+            <div class="number-text">1 / 2</div>
+            <video class="slide-video" controls>
+              <source src="files/projects/master_final_project/FinalDemo.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="slides">
+            <div class="number-text">2 / 2</div>
+            <img class="slide-image" src="files/projects/master_final_project/mfpbd.png">
+          </div>
+
+          <a class="prev" onclick="plusSlides('mfp', -1)">&#10094;</a>
+          <a class="next" onclick="plusSlides('mfp', 1)">&#10095;</a>
+
+          <div class="caption-container">
+            <p id="mfpCaption"></p>
+          </div>
+
+          <div class="row">
+            <div class="column-mfp">
+              <div class="gallery-demo cursor" onclick="currentSlides('mfp', 1)">
+                <img class="demo-poster" src="files/projects/master_final_project/FinalDemo_poster.png" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">Demo</h1>
+              </div>
+            </div>
+            <div class="column-mfp">
+              <div class="gallery-demo cursor" onclick="currentSlides('mfp', 2)">
+                <img src="files/projects/master_final_project/mfpbd.png" style="width: 100%;">
+                <h1 class="demo-caption">Block diagram</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="mfpArchitecture" style="padding-top: 3%;">
+          <h2 class="heading">Architecture</h2>
+          <h2 class="sub-heading">Version 1</h2>
+          <p>
+            The first version of design I came up with is to add an additional Bluetooth Low Energy (BLE) module to the Raspberry Pi (Model 3B+).
+            The BLE module I used is <a href="https://www.adafruit.com/product/4062" target="_blank">the Adafruit Feather nRF52840 Express</a>.</br>
+            With the help of the existing <a href="https://github.com/adafruit/Adafruit_nRF52_Arduino" target="_blank">nRF52 Arduino package</a>, I was able to capture 
+            the usb mouse signals, pass it on to nRF52840 through the serial port using python script, and have the nRF52840 running an Arduino script which send the mouse
+            signals to a Linux laptop through BLE.
+          </p>
+
+          <div style="display: flex; justify-content: center; text-align: center; margin-top: 5%;">
+            <div style="float: left; width: 40%; margin: auto;">
+              <figure>
+                <img src="files/projects/master_final_project/mfpversion1.jpeg" alt="Front" style="width: 100%;"/>
+                <figcaption>Fig.1 - Architecture Version 1</figcaption>
+              </figure>
+            </div>
+          </div>
+        
+          <h2 class="sub-heading">Problems</h2>
+          <ul style="list-style-type:disc">
+            <li style="margin-left:1em">Linux support for BLE (even BT in general) is unstable and still under improvement.</li>
+            <li style="margin-left:1em">Culminating delay happens due to multiple layers of communication (USB to serial to BLE).</li>
+          </ul>
+        </div>
+
+        <h2 class="sub-heading">Version 2</h2>
+        <p>
+          In the second version of design, I removed the nRF52840 (BLE module) and utilize the Raspberry Pi built-in bluetooth.</br>
+          With reference to <a href="https://github.com/quangthanh010290/keyboard_mouse_emulate_on_raspberry" target="_blank">the Keyboard & mouse emulate project by thanhle</a>, 
+          I was able to pass the usb mouse signals through the built-in bluetooth of Raspberry Pi. Then by adding a udev rule to the linux computer which invokes a script calling the 
+          <a href="https://xboxdrv.gitlab.io/" target="_blank">Xboxdrv</a>, I managed to map the mouse buttons & axis to a standard xbox gamepad, which I could use to play xbox
+          supported games as shown in the demo video.
+        </p>
+
+        <div style="display: flex; justify-content: center; text-align: center; margin-top: 5%;">
+          <div style="float: left; width: 40%; margin: auto;">
+            <figure>
+              <img src="files/projects/master_final_project/mfpversion2.jpg" alt="Front" style="width: 100%;"/>
+              <figcaption>Fig.1 - Architecture Version 1</figcaption>
+            </figure>
+          </div>
+        </div>
+
+        <div id="mfpFuture" style="padding-top: 3%;">
+          <h2 class="heading">Future Works</h2>
+            <ul style="list-style-type:disc">
+              <li style="margin-left:1em">
+                While some of the personal wheelchair at Argallab is using the usb mouse interface, the others use different ones (R-Net, Omni, etc.). With reference to the project
+                <a href="https://github.com/redragonx/can2RNET" target="_blank">can2RNET</a> by Stephen Chavez, I should be able to read the button & axis status information from
+                the R-Net connection, and send them out as general bluetooth mouse signals.
+              </li>
+              <li style="margin-left:1em">
+                Get rid of the xboxdrv layer on Linux, which involves significant amount of work to construct a generally recognizable bluetooth gamepad descriptor.
+              </li>
+              <li style="margin-left:1em">
+                Add Android app joystick support.
+              </li>
+              <li style="margin-left: 1em;">
+                Additional data collection (most should be done by the Android app) if needed.
+              </li>
+              <li style="margin-left: 1em;">
+                Pack everything up as open-source easy-reproducible project.
+              </li>
+            </ul>
+          </div>
+
+          <div id="mfpClose" class="modal-nav" style="padding-top: 3%;">
+            <button onclick="location.href='https://github.com/FrogJin/WheelchairBLEGamepad'">Github Page</a>
+            <button onclick="closeDemo('mfp')">Close Project</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- ME499 Modal Box -->
     <div id="me499Modal" class="modal">
